orthographic camera done

--- a/webGL-study/index.html
+++ b/webGL-study/index.html
@@ -11,16 +11,30 @@
 <body>
     <canvas id="c1" width="400" height="300" display="block" ></canvas>
     <canvas id="c2" width="400" height="300" display="block" ></canvas>
-    <canvas id="c3" width="400" height="300" display="block" ></canvas>
+    <!-- <canvas id="c3" width="400" height="300" display="block" ></canvas> -->
+    <!-- <canvas id="c4" width="400" height="300" display="block" ></canvas> -->
+    <!-- <canvas id="c5" width="400" height="300" display="block" ></canvas> -->
+    <canvas id="c6" width="400" height="300" display="block" ></canvas>
     <div id="uiContainer">
         <div id="ui">
             <div id="x"></div>
             <div id="y"></div>
+            <div id="rotation"></div>
+            <div id="angle"></div>
+            <div id="scaleX"></div>
+            <div id="scaleY"></div>
         </div>
     </div>
     <script src="https://webgl2fundamentals.org/webgl/resources/webgl-lessons-ui.js"></script>
+    <script src="https://webgl2fundamentals.org/webgl/resources/jquery-1.7.1.min.js"></script>
+    <script src="https://webgl2fundamentals.org/webgl/resources/jquery-ui-1.8.16.custom.min.js"></script>
+    <script src="https://webgl2fundamentals.org/webgl/resources/jquery.mousecapture.js"></script>
+    <script src="https://webgl2fundamentals.org/webgl/resources/jquery-gman-circle.js"></script>
     <script src="./simpleTriangle.js"></script>
     <script src="./simpleTriangleEx.js"></script>
-    <script src="./translation.js"></script>
+    <!-- <script src="./translation.js"></script>
+    <script src="./rotationExemple.js"></script> -->
+   <!--  <script src="./scaleExemple.js"></script> -->
+    <script src="matrixExemple.js"></script>
 </body>
 </html>
